@@ -1,0 +1,2 @@
+[overrides]
+default-priority-string = NORMAL:-VERS-ALL:+VERS-TLS1.3
